<resources>
    <string name="app_name">Asqar Non</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reg">Registratsiya</string>
    <string name="store_name">Do\'kon nomi</string>
    <string name="store_address">Do\'kon manzili</string>
    <string name="fio">F.I.O</string>
    <string name="registration">Ro\'yxatdan o\'tish</string>
</resources>