<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".splash.StoreRegistrationFragment">
    <TextView
        android:id="@+id/tx_store_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/reg"
        android:textSize="19sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black_800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:textSize="15sp"
        android:id="@+id/edit_store_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16sp"
        android:background="@drawable/bg_btn"
        android:hint="@string/store_name"
        android:inputType="phone"
        android:paddingStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tx_store_reg" />
    <EditText
        android:textSize="15sp"
        android:id="@+id/edit_store_address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16sp"
        android:background="@drawable/bg_btn"
        android:hint="@string/store_address"
        android:inputType="phone"
        android:paddingStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_store_name" />
    <EditText
        android:textSize="15sp"
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16sp"
        android:background="@drawable/bg_btn"
        android:hint="@string/fio"
        android:inputType="phone"
        android:paddingStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_store_address" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:id="@+id/btn_reg"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="32sp"
        android:layout_marginEnd="16sp"
        android:background="@drawable/bg_btn2"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>